[tool.poetry]
name = "my-many-reads"
version = "0.1.0"
description = "Books and readers social platform to manage readings and find recommendations. Masters dissertation project."
authors = ["Ángel Píñar Rivas"]
license = "GNU General Public License v3.0"
readme = "README.md"
packages = [{include = "mmr-backend"}]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.85.0"
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]
pytest = "7.1.3"
assertpy = "^1.1"
coverage = "^6.4.4"
requests = "^2.28.1"
uvicorn = "^0.18.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
